--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@ionic-native/camera": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/firebase-x": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
     "@schematics/angular": "^10.1.1",
     "@schematics/update": "^0.1001.1",
     "rxjs": "~6.6.0",
