--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "desafio-angular-new",
   "version": "0.0.0",
   "engines": {
-  "node": "12.x"
+  "node": "12.x",
+  "npm": "6.4.1"
   },
   "scripts": {
     "ng": "ng",
